--- a/js/package.json
+++ b/js/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.6",
   "description": "A Tree Widget using jsTree",
   "author": "Martin Renou",
+  "license": "MIT",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
